--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -4,21 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Regression"
+    "# Linear Regression Model that Accurately Predicts the Price of Apples"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Team members:\n",
+    "## Team members:\n",
     "- Keletso Pule\n",
     "- Khomotso Maake\n",
     "- Jacques Stander\n",
@@ -30,21 +23,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction"
+    "## 1. Introduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Objective__: In this notebook we will design a regression model that will predict the cost of apples based on given parameters."
+    "### 1.1. Objective \n",
+    "In this notebook we will design a regression model that will predict the cost of apples based on given parameters."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Parameters__:\n",
+    "### 1.2. Parameters\n",
     "1. Month/Season\n",
     "2. Distance travelled\n",
     "3. Supplier cost\n",
@@ -57,77 +51,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Outline:__"
+    "### 1.3. Outline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Body"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion"
+    "## 2. Importing Data and Plotting"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- What we accomplished. \n",
-    "- What we learnt.\n"
+    "#### 2.1. Import necessary packages\n",
+    "#### 2.2. Import the data into a Pandas Dataframe\n",
+    "#### 2.3. Show the data \n",
+    "#### 2.4. Make an initial plot of the data\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 3. Exploratory Data Analysis\n",
+    "### 3.1. Explore the data shape and types\n",
+    "### Look for null values\n",
+    "### Is the data univariate or multivariate?\n",
+    "### Determine kurtosis and skew\n",
+    "### Consider the distribution of the data\n",
+    "### Look for correlation of multivariate data \n",
+    "## 4. Split the data between training data and testing data\n",
+    "## Check for linearity, multicollinearity, independence, homoscedasticity, normality\n",
+    "### Homoscedasticity\n",
+    "Do the magnitude of the risiduals increase as the fitted data increases? This will result in a cone shape and that is called heteroscedasticity. We don’t want that.\n",
+    "### Normality\n",
+    "Draw a histogram of the normalized residuals and look for a bell curve around zero.\n",
+    "Draw a QQ plot of the residuals\n",
+    "## 5. Check for outliers in residuals\n",
+    "### Plot Cook’s distance\n",
+    "## 6. Build the Regression Model\n",
+    "### Results if we follow method 1: Taking Estimates\n",
+    "#### Show our calculations\n",
+    "#### Plot our results\n",
+    "#### Assess our results\n",
+    "### Results if we follow method 2: Least Squared Method\n",
+    "#### Show our calculations\n",
+    "#### Plot our results\n",
+    "#### Assess our results\n",
+    "### Results if we build our model using sklearn:\n",
+    "#### Show our calculations\n",
+    "#### Plot our results\n",
+    "#### Assess our results\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 7. Conclusion"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### What we accomplished. \n",
+    "### What we learnt.\n"
+   ]
   }
  ],
  "metadata": {
@@ -146,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
