updated image position

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -23,6 +23,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"predict.jpeg\" height=400>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Table Of Contents\n",
     "### 1. [Introduction](#introduction)\n",
     "\n",
@@ -52,13 +59,6 @@
    "metadata": {},
    "source": [
     "## 1. Introduction <a name=\"introduction\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"predict.jpeg\" height=\"400\">"
    ]
   },
   {
