Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -4,18 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Team members:\n",
-    "- Keletso Pule\n",
-    "- Khomotso Maake\n",
-    "- Jacques Stander\n",
-    "- Harrison Hlongwane\n",
-    "- Bhalisa Sodo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Linear Regression Model that Accurately Predicts the Price of Apples"
    ]
   },
@@ -86,13 +74,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3. Outline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 2. Importing Data and Plotting <a name=\"import\"></a>"
    ]
   },
@@ -100,11 +81,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1. Import necessary packages\n",
-    "#### 2.2. Import the data into a Pandas Dataframe\n",
-    "#### 2.3. Show the data \n",
-    "#### 2.4. Make an initial plot of the data\n",
-    "\n"
+    "#### 2.1. Import necessary packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import statsmodels as sm\n",
+    "import sklearn as skl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2. Import the data into a Pandas Dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3. Show the data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.4. Make an initial plot of the data"
    ]
   },
   {
