Data into Pandas DF

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +103,17 @@
    "metadata": {},
    "source": [
     "#### 2.2. Import the data into a Pandas Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_submission = pd.DataFrame(pd.read_csv(\"sample_submission.csv\"))\n",
+    "test_set = pd.DataFrame(pd.read_csv(\"df-test_set.csv\"))\n",
+    "train_set = pd.DataFrame(pd.read_csv(\"df-train_set.csv\"))"
    ]
   },
   {
