--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4         9270.0            393              4.48  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "(64376, 13)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "max    192230.000000   93193.000000               inf  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "4             100         1830.0             19  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "(685, 13)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "max       2774.000000   47200.000000    6827.000000  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,8 +909,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -958,7 +960,7 @@
        "1      2              1.30"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,6 +1110,13 @@
     "### What we accomplished. \n",
     "### What we learnt.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
