Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -989,7 +989,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Exploratory Data Analysis <a name=\"explore\"></a>"
+    "## 3. Exploratory Data Analysis <a name=\"explore\"></a>\n",
+    "Make at least 7 plots."
    ]
   },
   {
@@ -1064,23 +1065,6 @@
     "### 4.4. Testing for homoscedasticity\n",
     "Do the magnitude of the risiduals increase as the fitted data increases? This will result in a cone shape and that is called heteroscedasticity. We don’t want that.\n",
     "### 4.5. Testing for normality"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.4. Testing for homoscedasticity\n",
-    "Do the magnitude of the risiduals increase as the fitted data increases? This will result in a cone shape and that is called heteroscedasticity. We don’t want that."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.5. Testing for normality\n",
-    "Draw a histogram of the normalized residuals and look for a bell curve around zero.\n",
-    "Draw a QQ plot of the residuals"
    ]
   },
   {
