Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -90,10 +90,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These packages will be mainly used for data wrangling\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "# These packages will be mostly used for plotting the data\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "# These packages will be mostly used to build our linear regression model so that we can make predictions from it.\n",
     "import statsmodels as sm\n",
     "import sklearn as skl"
    ]
