--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -522,7 +522,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -678,6 +678,292 @@
    ],
    "source": [
     "#Summary statistic of each column in the dataframe.\n",
+    "train_set.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province</th>\n",
+       "      <th>Container</th>\n",
+       "      <th>Size_Grade</th>\n",
+       "      <th>Weight_Kg</th>\n",
+       "      <th>Commodities</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Low_Price</th>\n",
+       "      <th>High_Price</th>\n",
+       "      <th>Sales_Total</th>\n",
+       "      <th>Total_Qty_Sold</th>\n",
+       "      <th>Total_Kg_Sold</th>\n",
+       "      <th>Stock_On_Hand</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "      <td>64368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Province  Container  Size_Grade  Weight_Kg  Commodities  \\\n",
+       "avg_price_per_kg                                                            \n",
+       "False                64368      64368       64368      64368        64368   \n",
+       "True                     8          8           8          8            8   \n",
+       "\n",
+       "                   Date  Low_Price  High_Price  Sales_Total  Total_Qty_Sold  \\\n",
+       "avg_price_per_kg                                                              \n",
+       "False             64368      64368       64368        64368           64368   \n",
+       "True                  8          8           8            8               8   \n",
+       "\n",
+       "                  Total_Kg_Sold  Stock_On_Hand  avg_price_per_kg  \n",
+       "avg_price_per_kg                                                  \n",
+       "False                     64368          64368             64368  \n",
+       "True                          8              8                 8  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Counting the Number of rows with INF\n",
+    "train_set.groupby(np.isinf(train_set['avg_price_per_kg'])).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weight_Kg</th>\n",
+       "      <th>Low_Price</th>\n",
+       "      <th>High_Price</th>\n",
+       "      <th>Sales_Total</th>\n",
+       "      <th>Total_Qty_Sold</th>\n",
+       "      <th>Total_Kg_Sold</th>\n",
+       "      <th>Stock_On_Hand</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>64368.000000</td>\n",
+       "      <td>64368.000000</td>\n",
+       "      <td>64368.000000</td>\n",
+       "      <td>6.436800e+04</td>\n",
+       "      <td>64368.000000</td>\n",
+       "      <td>64368.000000</td>\n",
+       "      <td>64368.000000</td>\n",
+       "      <td>64368.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>12.775983</td>\n",
+       "      <td>75.649130</td>\n",
+       "      <td>89.606784</td>\n",
+       "      <td>1.939782e+04</td>\n",
+       "      <td>446.159847</td>\n",
+       "      <td>3337.055990</td>\n",
+       "      <td>477.677107</td>\n",
+       "      <td>10.465372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>35.912807</td>\n",
+       "      <td>159.508488</td>\n",
+       "      <td>172.225175</td>\n",
+       "      <td>4.442383e+04</td>\n",
+       "      <td>1184.232900</td>\n",
+       "      <td>7682.682767</td>\n",
+       "      <td>1453.963990</td>\n",
+       "      <td>26.126632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.120000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-5.770000e+04</td>\n",
+       "      <td>-595.000000</td>\n",
+       "      <td>-5040.000000</td>\n",
+       "      <td>-512.000000</td>\n",
+       "      <td>-78.670000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>1.155000e+03</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>175.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.020000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>5.400000e+03</td>\n",
+       "      <td>107.000000</td>\n",
+       "      <td>940.000000</td>\n",
+       "      <td>76.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.877400e+04</td>\n",
+       "      <td>390.000000</td>\n",
+       "      <td>3253.000000</td>\n",
+       "      <td>381.000000</td>\n",
+       "      <td>8.670000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>4400.000000</td>\n",
+       "      <td>4400.000000</td>\n",
+       "      <td>1.134701e+06</td>\n",
+       "      <td>39453.000000</td>\n",
+       "      <td>192230.000000</td>\n",
+       "      <td>93193.000000</td>\n",
+       "      <td>1250.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Weight_Kg     Low_Price    High_Price   Sales_Total  Total_Qty_Sold  \\\n",
+       "count  64368.000000  64368.000000  64368.000000  6.436800e+04    64368.000000   \n",
+       "mean      12.775983     75.649130     89.606784  1.939782e+04      446.159847   \n",
+       "std       35.912807    159.508488    172.225175  4.442383e+04     1184.232900   \n",
+       "min        0.120000      1.000000      1.000000 -5.770000e+04     -595.000000   \n",
+       "25%        7.000000     30.000000     35.000000  1.155000e+03       20.000000   \n",
+       "50%       10.000000     46.000000     55.000000  5.400000e+03      107.000000   \n",
+       "75%       11.000000     80.000000    100.000000  1.877400e+04      390.000000   \n",
+       "max      500.000000   4400.000000   4400.000000  1.134701e+06    39453.000000   \n",
+       "\n",
+       "       Total_Kg_Sold  Stock_On_Hand  avg_price_per_kg  \n",
+       "count   64368.000000   64368.000000      64368.000000  \n",
+       "mean     3337.055990     477.677107         10.465372  \n",
+       "std      7682.682767    1453.963990         26.126632  \n",
+       "min     -5040.000000    -512.000000        -78.670000  \n",
+       "25%       175.000000       0.000000          4.020000  \n",
+       "50%       940.000000      76.000000          6.000000  \n",
+       "75%      3253.000000     381.000000          8.670000  \n",
+       "max    192230.000000   93193.000000       1250.000000  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Droping INF \n",
+    "train_set = train_set.replace([np.inf, -np.inf], np.nan)\n",
+    "\n",
+    "train_set = train_set.dropna(axis = 0)\n",
+    "\n",
     "train_set.describe()"
    ]
   },
@@ -1081,7 +1367,49 @@
     "## 6. Build the Regression Model <a name=\"regress\"></a>\n",
     "Consider a treemodel\n",
     "### Results if we follow method 1: Taking Estimates\n",
-    "#### Show our calculations\n",
+    "#### Show our calculations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Slope = -0.04000586109498592\n",
+      "Intercept = 10.976486265786798\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Imported regression model\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "#Split predictors and response\n",
+    "X = train_set['Weight_Kg']\n",
+    "Y = train_set['avg_price_per_kg']\n",
+    "\n",
+    "#Calculating x bar, y bar\n",
+    "x_bar = np.mean(X)\n",
+    "y_bar = np.mean(Y)\n",
+    "\n",
+    "#Calculating Slope\n",
+    "b = sum((X-x_bar) * (Y-y_bar)) / sum((X-x_bar)**2)\n",
+    "\n",
+    "#Calculating intercept\n",
+    "a = y_bar - b*x_bar\n",
+    "\n",
+    "print(\"Slope = \" + str(b))\n",
+    "print(\"Intercept = \" + str(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Plot our results\n",
     "#### Assess our results\n",
     "### Results if we follow method 2: Least Squared Method\n",
@@ -1093,6 +1421,13 @@
     "#### Plot our results\n",
     "#### Assess our results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
