Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,19 +112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#import train and test sets into DataFrames\n",
     "sample_submission = pd.DataFrame(pd.read_csv(\"sample_submission.csv\"))\n",
-    "test_set = pd.DataFrame(pd.read_csv(\"df-test_set.csv\"))\n",
+    "test_set = pd.DataFrame(pd.read_csv(\"df-test_set.csv\", index_col=0))\n",
     "train_set = pd.DataFrame(pd.read_csv(\"df-train_set.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "69               1          400.0              2              4.50  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Index</th>\n",
        "      <th>Province</th>\n",
        "      <th>Container</th>\n",
        "      <th>Size_Grade</th>\n",
@@ -410,11 +409,25 @@
        "      <th>Total_Kg_Sold</th>\n",
        "      <th>Stock_On_Hand</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>W.CAPE-BERGRIVER ETC</td>\n",
        "      <td>EC120</td>\n",
        "      <td>1M</td>\n",
@@ -429,8 +442,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>W.CAPE-BERGRIVER ETC</td>\n",
        "      <td>M4183</td>\n",
        "      <td>1X</td>\n",
@@ -445,8 +457,7 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>W.CAPE-BERGRIVER ETC</td>\n",
        "      <td>EC120</td>\n",
        "      <td>1S</td>\n",
@@ -461,8 +472,7 @@
        "      <td>45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>W.CAPE-BERGRIVER ETC</td>\n",
        "      <td>M4183</td>\n",
        "      <td>1M</td>\n",
@@ -477,8 +487,7 @@
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>W.CAPE-BERGRIVER ETC</td>\n",
        "      <td>M4183</td>\n",
        "      <td>1L</td>\n",
@@ -497,29 +506,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   Index              Province Container Size_Grade  Weight_Kg  \\\n",
-       "0      1  W.CAPE-BERGRIVER ETC     EC120         1M       12.0   \n",
-       "1      2  W.CAPE-BERGRIVER ETC     M4183         1X       18.3   \n",
-       "2      3  W.CAPE-BERGRIVER ETC     EC120         1S       12.0   \n",
-       "3      4  W.CAPE-BERGRIVER ETC     M4183         1M       18.3   \n",
-       "4      5  W.CAPE-BERGRIVER ETC     M4183         1L       18.3   \n",
+       "                   Province Container Size_Grade  Weight_Kg  \\\n",
+       "Index                                                         \n",
+       "1      W.CAPE-BERGRIVER ETC     EC120         1M       12.0   \n",
+       "2      W.CAPE-BERGRIVER ETC     M4183         1X       18.3   \n",
+       "3      W.CAPE-BERGRIVER ETC     EC120         1S       12.0   \n",
+       "4      W.CAPE-BERGRIVER ETC     M4183         1M       18.3   \n",
+       "5      W.CAPE-BERGRIVER ETC     M4183         1L       18.3   \n",
        "\n",
-       "              Commodities        Date  Low_Price  High_Price  Sales_Total  \\\n",
-       "0  APPLE GOLDEN DELICIOUS  2020-07-09      128.0       136.0       5008.0   \n",
-       "1  APPLE GOLDEN DELICIOUS  2020-01-20      220.0       220.0       1760.0   \n",
-       "2  APPLE GOLDEN DELICIOUS  2020-08-19      120.0       120.0        720.0   \n",
-       "3  APPLE GOLDEN DELICIOUS  2020-05-06      160.0       160.0        160.0   \n",
-       "4  APPLE GOLDEN DELICIOUS  2020-05-04      140.0       160.0      14140.0   \n",
+       "                  Commodities        Date  Low_Price  High_Price  Sales_Total  \\\n",
+       "Index                                                                           \n",
+       "1      APPLE GOLDEN DELICIOUS  2020-07-09      128.0       136.0       5008.0   \n",
+       "2      APPLE GOLDEN DELICIOUS  2020-01-20      220.0       220.0       1760.0   \n",
+       "3      APPLE GOLDEN DELICIOUS  2020-08-19      120.0       120.0        720.0   \n",
+       "4      APPLE GOLDEN DELICIOUS  2020-05-06      160.0       160.0        160.0   \n",
+       "5      APPLE GOLDEN DELICIOUS  2020-05-04      140.0       160.0      14140.0   \n",
        "\n",
-       "   Total_Qty_Sold  Total_Kg_Sold  Stock_On_Hand  \n",
-       "0              38          456.0              0  \n",
-       "1               8          146.4              2  \n",
-       "2               6           72.0             45  \n",
-       "3               1           18.3              8  \n",
-       "4             100         1830.0             19  "
+       "       Total_Qty_Sold  Total_Kg_Sold  Stock_On_Hand  \n",
+       "Index                                                \n",
+       "1                  38          456.0              0  \n",
+       "2                   8          146.4              2  \n",
+       "3                   6           72.0             45  \n",
+       "4                   1           18.3              8  \n",
+       "5                 100         1830.0             19  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
