Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -1294,28 +1294,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3. Is the data univariate or multivariate?"
+    "### 3.3. Univariate analysis - non-graphical"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4. Determine kurtosis and skew"
+    "see Univariate and Multivariate Analysis [Notebook] -Univariate Analysis: Non-Graphical \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.5. Consider the distribution of the data"
+    "### 3.4. Univariate analysis - graphical\n",
+    "see Univariate and Multivariate Analysis [Notebook] -Univariate Analysis: Non-Graphical "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.6. Look for correlation of multivariate data "
+    "### 3.5. Multivariate analysis - non-graphical\n",
+    "see Univariate and Multivariate Analysis [Notebook] - Multivariate Analysis:non-graphical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.6. Multivariate analysis - graphical \n",
+    "see Univariate and Multivariate Analysis [Notebook] - Multivariate Analysis:  Graphical - Up to completing the Bubble Plot"
    ]
   },
   {
@@ -1323,44 +1333,19 @@
    "metadata": {},
    "source": [
     "## 4. Testing the suitability of the data\n",
-    "### 4.1. Testing for linearity"
+    "### 4.1. Testing for linearity\n",
+    "\n",
+    "Multiple Linear Regression - Advanced Regression Analysis [Notebook]\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2. Testing for multicollinearity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.3. Testing for independence"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.4. Testing for homoscedasticity\n",
-    "Do the magnitude of the risiduals increase as the fitted data increases? This will result in a cone shape and that is called heteroscedasticity. We don’t want that."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.5. Testing for normality"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.6. Check for outliers in residuals <a name=\"outliers\"></a>\n",
-    "#### Plot Cook’s distance"
+    "### 4.2. Testing for multicollinearity\n",
+    "\n",
+    "Multiple Linear Regression - Advanced Regression Analysis [Notebook]\n",
+    "Include the corellation heatmap"
    ]
   },
   {
@@ -1379,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1589,7 @@
        "[5 rows x 179 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1609,7 @@
        "(1952, 179)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1635,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1846,7 @@
        "[5 rows x 179 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1881,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1970,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1964,7 @@
        "array([ 1.56, -2.45, -0.91, ..., -1.35, -4.22,  0.61])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1991,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2066,6 +2051,41 @@
    "metadata": {},
    "source": [
     "#### Assess our results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing for independence\n",
+    "Multiple Linear Regression - Advanced Regression Analysis [Notebook]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing for homoscedasticity\n",
+    "Do the magnitude of the risiduals increase as the fitted data increases? This will result in a cone shape and that is called heteroscedasticity. We don’t want that.\n",
+    "Multiple Linear Regression - Advanced Regression Analysis [Notebook]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing for normality\n",
+    "Multiple Linear Regression - Advanced Regression Analysis [Notebook]\n",
+    "Include the QQ plot\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check for outliers in residuals <a name=\"outliers\"></a>\n",
+    "#### Plot Cook’s distance\n",
+    "Multiple Linear Regression - Advanced Regression Analysis [Notebook]\n"
    ]
   },
   {
