Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-      "## 1. Introduction <a name=\"introduction\"></a>\n",
+    "## 1. Introduction <a name=\"introduction\"></a>\n",
     "There are various factors that contribute to the perfomance of a business. These factors include the price of the goods sold, how much stock you have etc. Decesions (such as how much stock to have on hand and what price to set the Golden Delicious Apples to.)to improve the perfomance have to be made given the known knowledge.In this project we are given data of Golden Delecious Apples and certain parameters ;and will be  constructing a regression algorithm that will accurately predict how much a kilogram of the Apples will cost.\n"
    ]
   },
@@ -76,7 +76,6 @@
     "11. Competition in the market\n",
     "12. Cost of apple seedlings\n",
     "\n"
-
    ]
   },
   {
@@ -712,7 +711,6 @@
     "\n"
    ]
   },
-
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -1671,11 +1669,7 @@
     "ax1.set_xlabel(\"Weight_kg\")\n",
     "ax2.set_xlabel(\"Low_Price\")\n",
     "ax.set_title(\"Multiple Linear Regression\")\n",
-    "\n",
-    "\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
