Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -752,7 +752,7 @@
    "metadata": {},
    "source": [
     "### 3.4. Univariate analysis - graphical\n",
-    "see Univariate and Multivariate Analysis [Notebook] -Univariate Analysis: Non-Graphical "
+    "see Univariate and Multivariate Analysis [Notebook] -Univariate Analysis: Graphical "
    ]
   },
   {
@@ -1435,6 +1435,13 @@
    "source": [
     "plt.hist(errors)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems that our prediction is quote accurate only considering the training data and only considering the weight column as an independent variable. This however is not satisfactory since our model is univariate and multiple conditions need to be taken into account."
    ]
   },
   {
